--- a/templates/index.html
+++ b/templates/index.html
@@ -9,24 +9,34 @@
     <div id = "messages">CPU monitor</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
-    $(document).ready(function() {
-            if (!window.WebSocket) {
-            <!--Some broswer may not support websocket-->
-                if (window.MozWebSocket) {
-                    window.WebSocket = window.MozWebSocket;
-                } else {
-                    $('#messages').append("<li>Your browser doesn't support WebSockets.</li>");
-                }
-            }
-            ws = new WebSocket('ws://127.0.0.1:8080/webservices/cpu/');
-            ws.onopen = function(evt) {
-                alert("receive the message");
-                $('#messages').append('<li>Connected to websocket.</li>');
-            }
-            ws.onmessage = function(evt) {
-                alert("received the message");
-                console.log(evt.data);
-            };
+
+            $(document).ready(function() {
+
+var conn = new WebSocket('ws://127.0.0.1:8080/webservices/cpu/');
+conn.onmessage = function(e){ console.log(e.data); };
+conn.onopen = () => conn.send('hello');
+
+            <!--if (!window.WebSocket) {-->
+            <!--&lt;!&ndash;Some broswer may not support websocket&ndash;&gt;-->
+                <!--if (window.MozWebSocket) {-->
+                    <!--window.WebSocket = window.MozWebSocket;-->
+                <!--} else {-->
+                    <!--$('#messages').append("<li>Your browser doesn't support WebSockets.</li>");-->
+                <!--}-->
+            <!--}-->
+            <!--var ws = new WebSocket('ws://127.0.0.1:8080/webservices/cpu/');-->
+
+            <!--ws.onmessage = function(evt) {-->
+                <!--console.log(evt.data);-->
+                <!--&lt;!&ndash;$('#messages').append('<li>' + evt.data + '</li>');&ndash;&gt;-->
+            <!--}-->
+
+            <!--ws.onopen = function(evt) {-->
+                <!--$('#messages').append('<li>Connected to websocket.</li>');-->
+            <!--}-->
+
+            <!--ws.send("hello from the js gui");-->
+
         });
     </script>
   </body>
